--- a/index.html
+++ b/index.html
@@ -9,40 +9,88 @@
 <link rel="stylesheet" href="style.css">
 
 <body>
-    <div class="container"> <header>
-        <div class="logo"><img src="./image/chef-hat (2) 1.png" alt="">Foo</div>
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Menu</li>
-                <li>Contact</li>
-                <li>Shop</li>
-            </ul>
-        </nav>
-        <div class="search"><img src="./image/Vector.png" alt=""><input type="search" placeholder="Search .."></div>
-    </header>
-    <section class="fast-food">
-        <div>
-            <div class="text">
-                <div class="name"><span>Fast</span><span>Food Delivery</span></div>
-                <p>Sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque laudantium</p>
-                <div class="btn"><button>Order Now</button><button>Watch Video</button></div>
+    <div class="container">
+        <header>
+            <div class="logo"><img src="./image/chef-hat (2) 1.png" alt="">Foo</div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Menu</li>
+                    <li>Contact</li>
+                    <li>Shop</li>
+                </ul>
+            </nav>
+            <div class="search"><img src="./image/Vector.png" alt=""><input type="search" placeholder="Search .."></div>
+        </header>
+        <section class="fast-food">
+                <div class="text">
+                    <div class="name"><span>Fast</span><span>Food Delivery</span><span class="up-sign"><img
+                                src="./image/Group 4 (1).png" alt=""></span></div>
+                    <p class="info">Sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque
+                        laudantium</p>
+                    <div class="btn">
+                        <button>Order Now</button>
+                        <button class="watch">
+                            <p>Watch Video</p>
+                        </button>
+                    </div>
+                </div>
+            <div><img src="./image/17372 [Converted] 1.png" alt=""></div>
+        </section>
+        <section class="trending-food">
+            <h3>Todays Trending Food</h3>
+            <p class="past-info">Peoples loves it most the past week...</p>
+            <div class="box">
+                <div class="image">
+                    <div class="food-img">
+                    </div>
+                    <div class="min-img">
+                        <img src="./image/i7jc-listing.jpg" alt="">
+                        <img src="./image/i7jc-listing.jpg" alt="">
+                        <img src="./image/i7jc-listing.jpg" alt="">
+                    </div>
+                </div>
+                <div class="text">
+                    <p class="food-name">Basomoti Kacchi Biriyani</p>
+                    <p class="price">$1,050</p>
+                    <div class="degree"><span class="star"><img src="./image/Vector (2).png" alt=""><img src="./image/Vector (2).png" alt=""><img
+                                src="./image/Vector (2).png" alt=""><img src="./image/Vector (2).png" alt=""><img
+                                src="./image/Vector (2).png" alt=""></span><span>5.0 out of (1256) Reviews</span></div>
+                    <div class="button">
+                        <div class="heart"><img src="./image/Group 2.png" alt="" srcset=""></div>
+                        <div class="buy"><img src="./image/Vector (1).png" alt="" srcset=""></div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div><img src="./image/17372 [Converted] 1.png" alt=""></div>
-    </section>
-    <section class="trending-food">
-        <div class="image"></div>
-        <div>
-            <div class="text"></div>
-        </div>
-    </section>
-    <section class="popular-item">
-    </section>
-    <section class="contact"></section></div>
+        </section>
+        <section>
+            <div class="grid">
+                <div><img src="./image/i7jc-listing.jpg" alt=""></div>
+                <div><img src="./image/i7jc-listing.jpg" alt=""></div>
+                <div><img src="./image/i7jc-listing.jpg" alt=""></div>
+                <div><img src="./image/i7jc-listing.jpg" alt=""></div>
+                <div><img src="./image/i7jc-listing.jpg" alt=""></div>
+                <div><img src="./image/i7jc-listing.jpg" alt=""></div>
+                <div><img src="./image/i7jc-listing.jpg" alt=""></div>
+                <div><img src="./image/i7jc-listing.jpg" alt=""></div>
+            </div>
+        </section>
+        <footer>
+            <img src="" alt="">
+            <hr>
+            <div>
+                <div class="left"></div>
+                <div class="right">
+                    <table></table>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="span"></div>
+                <div class="span"></div>
+            </div>
+        </footer>
+    </div>
     <script src="javascript.js"></script>
 </body>
 
 </html>
-
-
